welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: not found: value n
	n=Math.abs(a-10);
        ^close10:3: error: not found: value m
	m=Math.abs(b-10);
        ^close10:4: error: not found: value n
	if(n>m){
           ^close10:5: error: not found: value m
		return m
                       ^close10:6: error: not found: value n
	}else if(n==m){
                 ^close10:8: error: not found: value n
	} else return n
                      ^