welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	n=Math.abs(a-10);
	m=Math.abs(b-10);
	if(n>m){
		return m
	}else if(n==m){
		return 0
	} else return n
}
